<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WanAndroid</string>
    <string name="show_dialog">显示Dialog</string>
    <string name="title">当前主题Title</string>
    <string name="content">当前主题Content</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="dialog_title">DialogTitle</string>
    <string name="dialog_msg">DialogMsg</string>
    <string name="widget_btn">自定义Button</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="home">首页</string>
    <string name="web">网页</string>
    <string name="start_fragment_1">跳转 Navigation Fragment 一</string>
    <string name="start_fragment_2">跳转 Navigation Fragment 二</string>
    <string name="start_fragment_3">跳转 Navigation Fragment 三</string>
    <string name="start_fragment_4">跳转 Navigation Fragment 四</string>
    <string name="btn_navigation">Navigation测试</string>
    <string name="btn_data_binding">DataBinding测试</string>
</resources>
