<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <androidx.appcompat.widget.AppCompatButton
      android:background="@drawable/main_dialog_btn_bg"
      android:textColor="@color/btn_dialog_content"
      android:id="@+id/btn_main_dialog"
      android:layout_marginTop="20dp"
      android:text="@string/show_dialog"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_main_title"
        android:textColor="@color/text_title"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_main_dialog"
        app:layout_constraintRight_toRightOf="@+id/btn_main_dialog"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_dialog"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/text_content"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_main_content"
        app:layout_constraintLeft_toLeftOf="@+id/tv_main_title"
        app:layout_constraintRight_toRightOf="@+id/tv_main_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_title"
        android:text="@string/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.minlukj.wanandroid.widget.AxButton
        app:corner_radius="8dp"
        app:border_stroke="2dp"
        app:border_color="@color/widget_border_view_color"
        android:background="@color/widget_button_view_bg"
        android:text="@string/widget_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_main_content"
        app:layout_constraintRight_toRightOf="@+id/tv_main_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>