<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.minlukj.wanandroid.brideg.state.DataBindingViewModel" />
        <variable
            name="click"
            type="com.minlukj.wanandroid.DataBindingActivity.ClickProxy" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.minlukj.wanandroid.widget.AxButton
            android:onClick="@{() -> click.startNavigation()}"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_navigation"
            app:corner_radius="20dp"
            android:background="@color/widget_button_view_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabLayout
            initTabAndPage="@{vm.initTabAndPage}"
            app:tabBackground="@color/tab_bg"
            app:tabIndicatorColor="@color/tab_indicator_color"
            app:tabIndicatorHeight="2dp"
            app:tabSelectedTextColor="@color/text_title"
            app:tabTextColor="@color/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/home_item"
                android:text="@string/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/web_item"
                android:text="@string/web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
            android:overScrollMode="never"
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <WebView
                    loadPage="@{vm.pageAssetPath}"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.core.widget.NestedScrollView>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <WebView
                    android:id="@+id/web_view"
                    loadPage="@{vm.pageAssetPath}"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.core.widget.NestedScrollView>
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
</layout>